--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "gulp start",
     "build": "gulp build",
-    "test": "editorconfig-cli && stylelint ./src/scss/**/*.scss --syntax scss && eslint ./src/js",
+    "test": "editorconfig-cli && stylelint ./src/scss/**/*.scss --syntax scss && eslint ./src/**/*js",
     "stylelint-fix": "stylelint ./src/scss/**/*.scss --fix --syntax scss",
     "eslint-fix": "eslint ./src/js/** --fix"
   },
@@ -59,9 +59,10 @@
   },
   "editorconfig-cli": [
     "src/*.html",
+    "src/html/*.html",
     "src/js/**/*.js",
-    "src/img/**/*.svg",
-    "src/scss/**/*.{scss}"
+    "src/img/svg/*.svg",
+    "src/scss/**/*.scss"
   ],
   "husky": {
     "hooks": {
